fix: section spacing

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ main p.section-description {
 
   header,
   main section {
-    margin-bottom: 200px;
+    margin-bottom: 80px;
   }
 
   h1 {
