--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 footer {
   display: flex;
   justify-content: center;
-  padding: 16px;
+  padding-bottom: 16px;
 }
 
 .footer-msg,
